--- a/style.css
+++ b/style.css
@@ -171,7 +171,14 @@ header {
   font-size: 2.5rem;
   padding: 2rem;
   margin-top: 200px;
-  margin-bottom: 500px;
+  margin-bottom: 350px;
+}
+header h1 {
+  font-size: 3rem;
+}
+header p {
+  font-size: 2rem;
+  margin-top: 2rem;
 }
 
 .section-container {
@@ -216,7 +223,7 @@ body::-webkit-scrollbar {
 }
 
 #carouselExampleIndicators p {
-  font-size: smaller;
+  font-size: 500;
   margin: 0;
 }
 #carouselExampleIndicators2 p {
@@ -244,6 +251,22 @@ body::-webkit-scrollbar {
   color: #303030;
 }
 
+.project-container span {
+  margin-left: 3px;
+  color: rgb(0, 123, 255);
+  border: 1px solid rgb(0, 123, 255);
+  border-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-weight: bold;
+  white-space: nowrap;
+  height: 20pt;
+  line-height: 20pt;
+  font-family: Inconsolata, monospace;
+  letter-spacing: 0.5px;
+  width: auto;
+}
+
 .project-header h2 {
   font-size: 3rem;
   margin: 0px;
@@ -251,4 +274,14 @@ body::-webkit-scrollbar {
 .project-header p {
   margin-bottom: 5px;
   font-weight: 600;
+}
+
+#email {
+  margin-top: 4rem;
+  font-size: 1.5rem;
+}
+
+.row {
+  margin-left: 0.2vw;
+  font-size: 1.1rem;
 }
