--- a/style.css
+++ b/style.css
@@ -128,6 +128,16 @@
 
 /*Loader  */
 
+.navbar-light .navbar-nav .nav-link {
+  border: 1px solid #707070;
+  border-radius: 8px;
+  font-size: 1.05rem;
+  color: #404040;
+}
+.navbar-light .navbar-nav .nav-link:hover {
+  background-color: rgba(165, 193, 212, 0.8);
+}
+
 canvas {
   position: fixed;
   top: 0;
@@ -136,7 +146,7 @@ canvas {
 
 :root {
   --dark-bg: rgba(199, 214, 229, 0.9);
-  --spacing: 350px;
+  --spacing: 22vh;
 
   font-family: brandon-grotesque, sans-serif;
   font-weight: 400;
@@ -150,7 +160,7 @@ main {
   position: absolute;
   width: 100%;
   margin: 0px auto;
-  padding: 120px 0px;
+  padding: 120px 0px 0px 0px;
 
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -170,8 +180,8 @@ header {
   grid-column: 2 / span 5;
   font-size: 2.5rem;
   padding: 2rem;
-  margin-top: 200px;
-  margin-bottom: 350px;
+  margin-top: 12vh;
+  margin-bottom: 22vh;
 }
 header h1 {
   font-size: 3rem;
@@ -191,7 +201,7 @@ header p {
 
 section {
   grid-column: 2 / 8;
-  padding-top: 100px;
+  padding-top: 14vh;
 }
 
 blockquote {
@@ -209,6 +219,13 @@ blockquote p {
   line-height: 1;
 }
 
+#end {
+  grid-column: 5 / 9;
+}
+#end .section-container {
+  margin-bottom: 2rem !important;
+}
+
 #projects {
   grid-column: 6 / 12;
 }
@@ -223,19 +240,19 @@ body::-webkit-scrollbar {
 }
 
 #carouselExampleIndicators p {
-  font-size: 500;
+  font-size: 2.3vh;
   margin: 0;
 }
 #carouselExampleIndicators2 p {
-  font-size: 500;
+  font-size: 2.3vh;
   margin: 0;
 }
 #carouselExampleIndicators3 p {
-  font-size: 1rem;
+  font-size: 1.8vh;
   margin: 0;
 }
 #carouselExampleIndicators3 li {
-  font-size: 1rem;
+  font-size: 1.8vh;
   margin: 0;
 }
 
